--- a/komunat/angular.json
+++ b/komunat/angular.json
@@ -38,7 +38,8 @@
               },
               {
                 "input": "src/global.scss"
-              }
+              },
+              "./node_modules/@mobiscroll/angular/dist/css/mobiscroll.min.css"
             ],
             "scripts": []
           },
