--- a/komunat/package.json
+++ b/komunat/package.json
@@ -23,11 +23,16 @@
     "@angular/router": "^7.2.2",
     "@angular/service-worker": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/http": "^5.2.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.0.1",
+    "@mobiscroll/angular": "https://npm.mobiscroll.com/@mobiscroll/angular-trial/-/angular-trial-4.5.3.tgz",
+    "angular-progress-bar": "^1.0.9",
+    "animate.css": "^3.7.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.4.0",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
