Added social plugin

--- a/komunat/angular.json
+++ b/komunat/angular.json
@@ -21,6 +21,16 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               {
+                "glob": "websocialshare.js",
+                "input": "node_modules/web-social-share/dist",
+                "output": "./"
+              },
+              {
+                "glob": "websocialshare/*",
+                "input": "node_modules/web-social-share/dist",
+                "output": "./"
+              },
+              {
                 "glob": "**/*",
                 "input": "src/assets",
                 "output": "assets"
