--- a/komunat/package.json
+++ b/komunat/package.json
@@ -24,15 +24,26 @@
     "@angular/service-worker": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/http": "^5.2.0",
+    "@ionic-native/social-sharing": "^5.2.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.0.1",
     "@mobiscroll/angular": "https://npm.mobiscroll.com/@mobiscroll/angular-trial/-/angular-trial-4.5.3.tgz",
     "angular-progress-bar": "^1.0.9",
     "animate.css": "^3.7.0",
+    "cordova-browser": "5.0.4",
+    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^3.0.0",
+    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-statusbar": "2.4.2",
+    "cordova-plugin-whitelist": "1.3.3",
+    "cordova-plugin-x-socialsharing": "5.4.4",
     "core-js": "^2.5.4",
+    "es6-promise-plugin": "^4.2.2",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.4.0",
+    "web-social-share": "^5.0.0",
     "zone.js": "~0.8.29"
   },
   "devDependencies": {
@@ -61,5 +72,16 @@
     "tslint": "~5.12.0",
     "typescript": "~3.1.6"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-x-socialsharing": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    }
+  }
 }
