--- a/komunat/package.json
+++ b/komunat/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.0.0",
+    "@ionic/storage": "^2.2.0",
     "animejs": "^3.0.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
