[KMT] Added prototype function

--- a/komunat/package.json
+++ b/komunat/package.json
@@ -27,8 +27,16 @@
     "@ionic/angular": "^4.0.0",
     "@ionic/storage": "^2.2.0",
     "animejs": "^3.0.1",
+    "cordova-browser": "5.0.4",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^4.0.1",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "nodemailer": "^6.1.1",
     "rxjs": "~6.3.3",
     "web-social-share": "^5.0.0",
     "zone.js": "~0.8.29"
@@ -59,5 +67,18 @@
     "tslint": "~5.12.0",
     "typescript": "~3.1.6"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "browser"
+    ]
+  }
 }
