--- a/komunat/package.json
+++ b/komunat/package.json
@@ -22,13 +22,18 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file": "^5.5.0",
+    "@ionic-native/file-opener": "^5.5.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.0.0",
     "@ionic/storage": "^2.2.0",
+    "@types/html2canvas": "0.0.35",
+    "@types/jspdf": "^1.3.0",
     "animejs": "^3.0.1",
     "cordova-browser": "5.0.4",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "6.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^4.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -36,7 +41,10 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "html2canvas": "^1.0.0-rc.1",
+    "jspdf": "^1.5.3",
     "nodemailer": "^6.1.1",
+    "pdfmake": "^0.1.54",
     "rxjs": "~6.3.3",
     "web-social-share": "^5.0.0",
     "zone.js": "~0.8.29"
@@ -75,7 +83,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-file": {}
     },
     "platforms": [
       "browser"
