--- a/komunat/package.json
+++ b/komunat/package.json
@@ -30,6 +30,7 @@
     "@ionic/storage": "^2.2.0",
     "@types/html2canvas": "0.0.35",
     "@types/jspdf": "^1.3.0",
+    "@types/pdfmake": "^0.1.3",
     "animejs": "^3.0.1",
     "cordova-browser": "5.0.4",
     "cordova-plugin-device": "^2.0.2",
