--- a/komunat/package.json
+++ b/komunat/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/file": "^5.5.0",
     "@ionic-native/file-opener": "^5.5.0",
+    "@ionic-native/google-analytics": "^5.5.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.0.0",
@@ -35,6 +36,7 @@
     "cordova-browser": "5.0.4",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "6.0.1",
+    "cordova-plugin-google-analytics": "1.8.6",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^4.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -86,7 +88,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "cordova-plugin-google-analytics": {}
     },
     "platforms": [
       "browser"
