[KMT] added ga into dockerfile

--- a/komunat/Dockerfile
+++ b/komunat/Dockerfile
@@ -9,6 +9,7 @@ COPY ./ /home/alpine/app/
 WORKDIR /home/alpine/app/
 
 RUN npm rebuild node-sass && npm install
-
+RUN ionic cordova plugin add cordova-plugin-google-analytics
+RUN npm install @ionic-native/google-analytics
 RUN ionic cordova build browser --minify --prod
 
