--- a/komunat/package.json
+++ b/komunat/package.json
@@ -25,9 +25,10 @@
     "@ionic-native/file": "^5.5.0",
     "@ionic-native/file-opener": "^5.5.0",
     "@ionic-native/google-analytics": "^5.5.1",
+    "@ionic-native/ionic-webview": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.0.0",
+    "@ionic/angular": "^4.4.0",
     "@ionic/storage": "^2.2.0",
     "@types/html2canvas": "0.0.35",
     "@types/jspdf": "^1.3.0",
@@ -45,6 +46,7 @@
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "html2canvas": "^1.0.0-rc.1",
+    "ionic-image-loader": "^7.0.0-beta.2",
     "jspdf": "^1.5.3",
     "nodemailer": "^6.1.1",
     "pdfmake": "^0.1.54",
