--- a/komunat/docker-compose.yml
+++ b/komunat/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - "traefik.http.routers.demo.tls=true"
       - "traefik.http.routers.demo.tls.certresolver=mytlschallenge"
       - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
+      - "traefik.http.services.demo.loadbalancer.server.port=8100"
       - "traefik.http.routers.demo-redirs.rule=hostregexp(`{host:.+}`)"
       - "traefik.http.routers.demo-redirs.entrypoints=http"
       - "traefik.http.routers.demo-redirs.middlewares=redirect-to-https"
