--- a/komunat/.github/workflows/ci.yml
+++ b/komunat/.github/workflows/ci.yml
@@ -40,6 +40,6 @@ jobs:
       - name: Publish to Registry
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
-          name: komunat/pwa
+          name: komunat/pwa:2019
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
