--- a/komunat/Dockerfile
+++ b/komunat/Dockerfile
@@ -1,15 +1,3 @@
-FROM node:10.15.3-alpine
+FROM nginx:1.17.9-alpine
 
-RUN apk add --no-cache git
-
-RUN npm install -g ionic cordova
-
-COPY ./ /home/alpine/app/
-
-WORKDIR /home/alpine/app/
-
-RUN npm rebuild node-sass && npm install
-RUN ionic cordova plugin add cordova-plugin-google-analytics
-RUN npm install @ionic-native/google-analytics
-EXPOSE 80
-ENTRYPOINT [ "ionic","serve","--port=80"]
+COPY ./build/ /usr/share/nginx/html
